assets/scripts/dialogs/SaveAsImageDialog.scss
@import '../../css/variables.scss';
@import '../../css/mixins.scss';

// Content of Save as Image dialog box
.save-as-image-dialog {
  width: 720px;

  p {
    text-align: center;
  }

  input[type='checkbox'] {
    margin-left: 20px;
    font-size: 25px;
    user-select: none;
  }

  label {
    font-size: 16px;
    padding-left: 1px;
    user-select: none;
  }

  footer {
    text-align: center;
  }
}

.save-as-image-preview {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 300px;
}

.save-as-image-preview-loading {
  font-size: 16px;
  text-align: center;
}

.save-as-image-preview-image {
  @include touch-callout(default);

  text-align: center;
  font-size: 0;

  img {
    /* Images may have variable dimensions. Use max-width/max-height
    to preserve aspect ratio */
    max-width: 100%;
    max-height: 300px;
    cursor: move; // IE
    cursor: grab;
    border-top: 3px dashed $ui-colour;
    border-bottom: 3px dashed $ui-colour;
  }
}

.save-as-image-download {
  text-align: center;
}

